# sorting-hat

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: classifier.py  config.py  interviewer.py  main.py  session_finalize.py  state.py
agent/probes/: __init__.py  arc.py  compass.py  iceberg.py  two_buttons.py
assets/templates/: README.md  _generate_bases.py
delivery/: README.md  __init__.py  server.py
docs/: GOALS.md  borrowed-craft.md
docs/decisions/: 0001-model-selection.md
kiosk/: .env.local.example  .gitignore  README.md  SMOKE_TEST.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
kiosk/app/: globals.css  kiosk.module.css  layout.tsx  page.tsx  shape-interface.module.css
kiosk/components/: ActiveScreen.tsx  CompleteScreen.tsx  IdleScreen.tsx  Kiosk.tsx  NoiseCancellation.tsx  SessionProgress.tsx
kiosk/lib/: audioPreflight.ts  interfaceMode.ts  kioskMode.ts
pipeline/: classify.py  deliver.py  fill.py  render.py
prompts/: bg_classifier.md  classify.md  fill.md  persona.md  probe_arc.md  probe_compass.md  probe_iceberg.md  probe_two_buttons.md
prompts/archive/: fill_v2.md  fill_v3.md
scripts/: replay_interview.py
tests/: conftest.py  test_classifier.py  test_classifier_wiring.py  test_classify.py  test_deliver.py  test_delivery_server.py  test_fill.py  test_g2.py  test_harness.py  test_interviewer.py  test_probe_arc.py  test_probe_compass.py  test_probe_iceberg.py  test_probe_two_buttons.py  test_render.py  test_replay_harness.py  test_routing.py  test_session_finalize.py  test_state.py
(+24 files in other folders)
