[project]
name = "sorting-hat"
version = "0.1.0"
description = "A voice-AI kiosk that interviews a person and hands back the shape of themselves, drawn in a meme."
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[openai,deepgram,cartesia,silero,turn-detector]>=1.5.9",
    "openai>=1.60.0",
    "pillow>=11.0.0",
    "qrcode[pil]>=8.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "pipeline"]
